[tool.poetry]
name = "constancy_v2.0"
version = "0.0.2"
description = "Money management software."
authors = ["luis_guilherme97 <61566116+crimson-luis@users.noreply.github.com>"]
license = "GPL-2.0 License"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.1"
mplcyberpunk = "^0.4.0"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
